force-app/main/default/objects/Scheduled_Request__c/Scheduled_Request__c.object-meta.xml
<CustomObject>
    <label>Scheduled Request</label>
    <nameField>
        <label>Scheduled Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scheduled Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>