force-app/main/default/objects/Scheduled_Request__c/fields/Api__c.field-meta.xml
<CustomField>
    <fullName>Api__c</fullName>
    <description>Identifier of the API to call</description>
    <label>Api</label>
    <length>40</length>
    <type>Text</type>
</CustomField>