force-app/main/default/objects/Scheduled_Request__c/fields/Domain__c.field-meta.xml
<CustomField>
    <fullName>Domain__c</fullName>
    <label>Domain</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Application_Domain</valueSetName>
    </valueSet>
</CustomField>