force-app/main/default/objects/Scheduled_Request__c/fields/Idempotency_Key__c.field-meta.xml
<CustomField>
    <fullName>Idempotency_Key__c</fullName>
    <description>Idempotency key to avoid duplicates on retries</description>
    <label>Idempotency Key</label>
    <length>36</length>
    <type>Text</type>
</CustomField>