force-app/main/default/objects/Scheduled_Request__c/listViews/Failed_Scheduled_Requests.listView-meta.xml
<ListView>
    <fullName>Failed_Scheduled_Requests</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Domain__c</field>
        <operation>equals</operation>
        <value>NKS</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Failed</value>
    </filters>
    <label>Failed Scheduled Requests</label>
</ListView>